[package]
name = "solana-signer-gcp"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519 = { version = "2.2.3", features = ["pkcs8"] }
gcloud-sdk = { version = "0.26", features = [
    "google-cloud-kms-v1",
    "google-longrunning",
] }
solana-sdk = { version = "2.1.13" }
thiserror = "2.0.11"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
pem = "3.0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
